--- a/templates/base.html
+++ b/templates/base.html
@@ -179,8 +179,8 @@
             <div class="main">
                 <div class="menu-size"><a href="#" class="menu-link">인사관리</a></div>
                 <div class="main-menu-content">
-                    <a href="#" class="submenu-link">인사등록</a>
-                    <a href="#" class="submenu-link">회원 관리</a>
+                    <a href="/HR/management" class="submenu-link">인사등록</a>
+                    <a href="/HR/member" class="submenu-link">회원 관리</a>
                 </div>
             </div>
             <div class="main">
