--- a/templates/base.html
+++ b/templates/base.html
@@ -163,9 +163,8 @@
             <div class="main">
                 <div class="menu-size"><a href="#" class="menu-link">경리시스템</a></div>
                 <div class="main-menu-content">
-                    <a href="#" class="submenu-link">급여 관리</a>
-                    <a href="#" class="submenu-link">지출내역</a>
-                    <a href="#" class="submenu-link">수입내역</a>
+                    <a href="/accounting/outlay" class="submenu-link">지출내역</a>
+                    <a href="/accounting/income" class="submenu-link">수입내역</a>
                 </div>
             </div>
             <div class="main">
