--- a/accounting/templates/accounting/salary_list.html
+++ b/accounting/templates/accounting/salary_list.html
@@ -1,7 +1,7 @@
 salary list
 <br>
 {% for salary in salary_list %}
-    <span>번호 :{{ forloop.counter }}</span>
+    <span>번호 :{{ salary.member_id.pk }}</span>
     <span>이름 : {{salary.member_id.name}}</span>
     <span>기본급 : {{salary.base}}</span>
     <span>상여금 : {{salary.bonus}}</span>
