--- a/accounting/templates/accounting/salary_create.html
+++ b/accounting/templates/accounting/salary_create.html
@@ -1,19 +1,21 @@
 <p>salary create</p>
 
-
+<form action="" method="GET">
+    <input type="text" class="datefield" name="date" value="{{ date }}">
+    <input type="submit" value="등록">
+</form>
 
 <form action='', method='POST'>
     {% csrf_token %}
-    <input type="text" class="datefield" value="{{ today }}" name="date">
-    <br>
-    {% for member in member_list %}
-        <span>번호 :{{ member.pk }}</span>
-        <span>이름 : {{member.name}}</span>
-        {{daily_salary}}
-        <!--form 을 여러개 추가 할 수 있어야됨 지금은 하나밖에 안됨-->
-        <!--자바스크립트로 추가하기-->
+    {% for form in daily_form %}
+        <span>번호 : {{ form.instance.monthly_salary.member_id.pk }}</span>
+        <span>이름 : {{ form.instance.monthly_salary.member_id.name }}</span>
+        {{ form }}
         <br>
     {% endfor %}
+    <!--form 을 여러개 추가 할 수 있어야됨 지금은 하나밖에 안됨-->
+    <!--자바스크립트로 추가하기-->
+
     <input type="submit" value="등록">
 </form>
 
