--- a/accounting/templates/accounting/salary_create.html
+++ b/accounting/templates/accounting/salary_create.html
@@ -2,20 +2,29 @@
 
 <form action="" method="GET">
     <input type="text" class="datefield" name="date" value="{{ date }}">
-    <input type="submit" value="등록">
+    <input type="submit" value="변경">
 </form>
 
 <form action='', method='POST'>
     {% csrf_token %}
-    {% for form in daily_form %}
-        <span>번호 : {{ form.instance.monthly_salary.member_id.pk }}</span>
-        <span>이름 : {{ form.instance.monthly_salary.member_id.name }}</span>
-        {{ form }}
+    {% if daily_form|length == 0 %}
+        {% for member in member_list %}
+            <span>번호 : {{ member.pk }}</span>
+            <span>이름 : {{ member.name }}</span>
+            {{ form }}
+            <br>
+        {% endfor %}
+    {% else %}
+
+    {% for daily in daily_form %}
+        <span>번호 : {{ daily.instance.monthly_salary.member_id.pk }}</span>
+        <span>이름 : {{ daily.instance.monthly_salary.member_id.name }}</span>
+        {{ daily }}
         <br>
     {% endfor %}
     <!--form 을 여러개 추가 할 수 있어야됨 지금은 하나밖에 안됨-->
     <!--자바스크립트로 추가하기-->
-
+    {% endif %}
     <input type="submit" value="등록">
 </form>
 
