--- a/accounting/templates/accounting/salary_list.html
+++ b/accounting/templates/accounting/salary_list.html
@@ -2,7 +2,7 @@ salary list
 <br>
 {% for salary in salary_list %}
     <span>번호 :{{ salary.member_id.pk }}</span>
-    <span>이름 : {{salary.member_id.name}}</span>
+    <span><a href="{% url 'accounting:salary_detail' salary.member_id.pk %}">이름</a> : {{salary.member_id.name}}</span>
     <span>기본급 : {{salary.base}}</span>
     <span>상여금 : {{salary.bonus}}</span>
     <span>추가금 : {{salary.additional}}</span>
