--- a/accounting/templates/accounting/collect_detail.html
+++ b/accounting/templates/accounting/collect_detail.html
@@ -1,1 +1,26 @@
 collect detail
+
+
+
+<p>{{ collect.connect_id }}</p>
+<p>{{ collect.brief }}</p>
+<p>수입금액 : {{ collect.connect_id.order_id.price }}</p>
+<p>수입일 : {{ collect.collect_date }}</p>
+<p>확인 : {{ collect.check }}</p>
+<p>{{ collect.creator }}</p>
+<p>{{ collect.pub_date }}</p>
+
+<br>
+
+<p>주문</p>
+<p>고객 : {{ order.consumer }}</p>
+<p>가격 : {{ order.consumer }}</p>
+<p>왕복or편도 : {{ order.consumer }}</p>
+<p>용도 : {{ order.consumer }}</p>
+<p>버스종류 : {{ order.consumer }}</p>
+<p>요구사항 : {{ order.consumer }}</p>
+<p>탑승인원 : {{ order.consumer }}</p>
+<p>카드or현금 : {{ order.consumer }}</p>
+<p>출발날짜 : {{ order.consumer }}</p>
+<p>적요 : {{ order.consumer }}</p>
+
