--- a/crudmember/templates/crudmember/login.html
+++ b/crudmember/templates/crudmember/login.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Kingbus ERP</title>
-    <link href="/static/css/login.css" rel="stylesheet" type="text/css" />
+    <link href="{% static 'css/login.css' %}" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
