--- a/dispatch/templates/dispatch/order_detail.html
+++ b/dispatch/templates/dispatch/order_detail.html
@@ -12,6 +12,6 @@
     <p>요구사항 : {{order.requirements}}</p>
     <p>탑승인원 : {{order.people_num}}</p>
     <p>카드or현금 : {{order.pay_type}}</p>
-    <p>출발날짜 : {{order.first_departure_date}}</p>
+    <p>출발날짜 : {{order.departure_date}}</p>
     <p>등록날짜 : {{order.pub_date}}</p>
 {% endblock %}
