--- a/dispatch/templates/dispatch/order_edit.html
+++ b/dispatch/templates/dispatch/order_edit.html
@@ -1,10 +1,16 @@
 {% extends 'base.html' %}
 
 {% block content %}
-{{order}}
-<!--
+
     <form method="POST" action="">
         {% csrf_token %}
+        {{ order_form }}
+        <br>
+        {{ consumer_form }}
+
+        <input type="submit" value="등록">
+    </form>
+        <!--
         {% for field in order_form %}
         <div class="form-group">
             <label for="{{ field.id_for_label }}">{{ field.label }}</label>
@@ -34,4 +40,17 @@
         <input type="submit" value="등록">
     </form>
 -->
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+
+<script>
+    // This code activates flatpickr on fields with the 'datetimefield' class when the document has loaded
+    window.addEventListener("DOMContentLoaded", function () {
+        flatpickr(".datetimefield", {
+            enableTime: true,
+            dateFormat: "Y-m-d H:i",
+        });
+    });
+</script>
 {% endblock %}
