--- a/dispatch/templates/dispatch/order_detail.html
+++ b/dispatch/templates/dispatch/order_detail.html
@@ -13,5 +13,9 @@
     <p>탑승인원 : {{order.people_num}}</p>
     <p>카드or현금 : {{order.pay_type}}</p>
     <p>출발날짜 : {{order.departure_date}}</p>
+    <p>도착날짜 : {{order.arrival_date}}</p>
     <p>등록날짜 : {{order.pub_date}}</p>
+    <p>출발지 : {{order.route}}</p>
+    <p>도착지 : {{order.route.arrival}}</p>
+    <p>경유지 : {{order.route.stopover}}</p>
 {% endblock %}
