--- a/dispatch/templates/dispatch/order_edit.html
+++ b/dispatch/templates/dispatch/order_edit.html
@@ -7,6 +7,8 @@
         {{ order_form }}
         <br>
         {{ consumer_form }}
+        <br>
+        {{ route_form }}
 
         <input type="submit" value="등록">
     </form>
