--- a/dispatch/templates/dispatch/management_edit.html
+++ b/dispatch/templates/dispatch/management_edit.html
@@ -1,1 +1,24 @@
-management_edit
+{% extends 'base.html' %}
+
+{% block content %}
+    <p>노선이름 : {{ order.route.route_name }}</p> 
+    <p>출발지 : {{ order.route.departure }}</p> 
+    <p>목적지 : {{ order.route.arrival }}</p>
+    <p>경유지 : {{ order.route.stopover }}</p> 
+    <p>버스 대수 : {{ order.bus_cnt }}</p> 
+    <p>가격 : {{ order.price }}</p> 
+    <p>왕복or편도 : {{ order.kinds }}</p> 
+    <p>목적 : {{ order.purpose }}</p> 
+    <p>버스종류 : {{ order.bus_type }}</p> 
+    <p>요구사항 : {{ order.requirements }}</p> 
+    <p>출발날짜 : {{ order.departure_date }}</p> 
+    <p>도착날짜 : {{ order.arrival_date }}</p> 
+    <p>배차여부 : {{ order.check }}</p> 
+
+    <form method="POST" action="">
+        {% csrf_token %}
+        {{ connect_form }}
+        <input type="submit" value="등록">
+    </form>
+    
+{% endblock %}
