--- a/dispatch/templates/dispatch/order_detail.html
+++ b/dispatch/templates/dispatch/order_detail.html
@@ -1,21 +1,31 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <p>작성자 : {{order.creator.name}}</p>
-    <p>고객 이름: {{order.consumer.name}}</p>
-    <p>고객 전화번호: {{order.consumer.tel}}</p>
-    <p>버스 대수 : {{order.bus_cnt}}</p>
-    <p>가격 : {{order.price}}</p>
-    <p>왕복or편도 : {{order.kinds}}</p>
-    <p>용도 : {{order.purpose}}</p>
-    <p>버스종류 : {{order.bus_type}}</p>
-    <p>요구사항 : {{order.requirements}}</p>
-    <p>탑승인원 : {{order.people_num}}</p>
-    <p>카드or현금 : {{order.pay_type}}</p>
-    <p>출발날짜 : {{order.departure_date}}</p>
-    <p>도착날짜 : {{order.arrival_date}}</p>
-    <p>등록날짜 : {{order.pub_date}}</p>
-    <p>출발지 : {{order.route}}</p>
-    <p>도착지 : {{order.route.arrival}}</p>
-    <p>경유지 : {{order.route.stopover}}</p>
+    <p>작성자 : {{ order.creator }}</p> 
+    <p>고객 이름 : {{ order.consumer.name }}</p> 
+    <p>고객 전화번호 : {{ order.consumer.tel }}</p> 
+    <p>노선이름 : {{ order.route.route_name }}</p> 
+    <p>출발지 : {{ order.route.departure }}</p> 
+    <p>목적지 : {{ order.route.arrival }}</p>
+    <p>경유지 : {{ order.route.stopover }}</p> 
+    <p>버스 대수 : {{ order.bus_cnt }}</p> 
+    <p>가격 : {{ order.price }}</p> 
+    <p>왕복or편도 : {{ order.kinds }}</p> 
+    <p>목적 : {{ order.purpose }}</p> 
+    <p>버스종류 : {{ order.bus_type }}</p> 
+    <p>요구사항 : {{ order.requirements }}</p> 
+    <p>탑승인원 : {{ order.people_num }}</p> 
+    <p>등록시간 : {{ order.pub_date }}</p> 
+    <p>카드or현금 : {{ order.pay_type }}</p> 
+    <p>출발날짜 : {{ order.departure_date }}</p> 
+    <p>도착날짜 : {{ order.arrival_date }}</p> 
+    <p>배차여부 : {{ order.check }}</p> 
+    <br>
+    {% for connect in connects %}
+        <p>기사 : {{ connect.driver_id.name }}</p>
+        <p>버스 : {{ connect.bus_id.vehicle_num }}</p>
+        <a href="{% url 'dispatch:management_edit' order.id connect.id %}">수정</a>
+    {% endfor %}
+
+    <a href="{% url 'dispatch:management_create' order.id %}">배차</a>
 {% endblock %}
