--- a/dispatch/templates/dispatch/dispatch_list.html
+++ b/dispatch/templates/dispatch/dispatch_list.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    {% for d in dispatch_list %}
+    {% for d in date %}
         <div>
-            <span>날짜 : {{ d.departure_date }}</span>
-            <a href="{% url 'dispatch:dispatch_daily_route' d.departure_date %}">
+            <span>날짜 : {{ d }}</span>
+            <a href="{% url 'dispatch:dispatch_daily_route' d %}">
                 <span>노선별</span>
             </a>
-            <a href="{% url 'dispatch:dispatch_daily_bus' d.departure_date %}">
+            <a href="{% url 'dispatch:dispatch_daily_bus' d %}">
                 <span>호수별</span>
             </a>
         </div>
