--- a/notice/templates/notice/kinds.html
+++ b/notice/templates/notice/kinds.html
@@ -13,9 +13,12 @@
             <div class="aside_title">
                 <div class="aside_title_font">공지사항</div>
             </div>
-            <div id="aside_contents"><a href="notice_driver.html" class="aside_contents_link">-기사님 공지사항</a></div>
-            <div id="aside_contents" class="aside_contents_thispage"><a href="notice_office.html"
-                    class="aside_contents_link">-사무실 공지사항</a></div>
+            <div id="aside_contents">
+                <a href="notice_driver.html" class="aside_contents_link">-기사님 공지사항</a>
+            </div>
+            <div id="aside_contents" class="aside_contents_thispage">
+                <a href="notice_office.html" class="aside_contents_link">-사무실 공지사항</a>
+            </div>
     </aside>
 
     <section class="section">
@@ -29,8 +32,11 @@
                             <option>작성자</option>
                         </select>
                     </div>
-                    <input type="text" class="top_box_input_text">
-                    <input type="button" class="top_box_button">
+                    <div class="top_box_search">
+                        <input type="text" class="top_box_input_text">
+                        <i class="top_box_search_button fas fa-search lg"></i>
+                        
+                    </div>
                 </div>
             </div>
 
