--- a/templates/base.html
+++ b/templates/base.html
@@ -112,5 +112,6 @@
     integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
     crossorigin="anonymous"></script>
       <script src="{% static 'js/main_header_login_downbutton.js'%}"></script>
+      <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
   </body>
 </html>
