--- a/notice/templates/notice/kinds.html
+++ b/notice/templates/notice/kinds.html
@@ -33,9 +33,10 @@
                         </select>
                     </div>
                     <div class="top_box_search">
-                        <input type="text" class="top_box_input_text">
-                        <i class="top_box_search_button fas fa-search lg"></i>
-                        
+                        <form method="GET" action="">
+                            <input type="text" class="top_box_input_text">
+                            <input type="submit" value="" class="top_box_search_button">
+                        </form>
                     </div>
                 </div>
             </div>
@@ -44,56 +45,60 @@
                 <div class="table_header">
                     <div class="mid_box_table_header_number">번호</div>
                     <div class="mid_box_table_header_title">제목</div>
-                    <div class="mid_box_table_header_creater">작성자</div>
+                    <div class="mid_box_table_header_creator">작성자</div>
                     <div class="mid_box_table_header_day">등록일</div>
                     <div class="mid_box_table_header_viewer">조회</div>
                 </div>
-                <div class="table_contents">
-                    <div class="mid_box_table_contents_number">1</div>
-                    <a href="notice_detail_office.html" class="mid_box_table_contents_title_link">
-                        <div class="mid_box_table_contents_title">첫번째 공지사항(The First Notice)</div>
-                    </a>
-                    <div class="mid_box_table_contents_creater">이도울</div>
-                    <div class="mid_box_table_contents_day">2021-02-17</div>
-                    <div class="mid_box_table_contents_viewer">0</div>
-                </div>
-                <div class="table_contents">
-                </div>
-                <div class="table_contents">
-                </div>
-                <div class="table_contents">
-                </div>
-                <div class="table_contents">
-                </div>
-                <div class="table_contents">
-                </div>
-                <div class="table_contents">
-                </div>
-                <div class="table_contents">
-                </div>
-                <div class="table_contents">
-                </div>
-                <div class="table_contents">
-                </div>
+                {% for notice in notices %}
+                    <div class="table_contents">
+
+                        <div class="mid_box_table_contents_number">{{notice.num}}</div>
+                        <div class="mid_box_table_contents_title">
+                            <a href="{% url 'notice:detail' kinds notice.id %}" class="mid_box_table_contents_title_link">{{notice.title}}</a>
+                        </div>
+                        <div class="mid_box_table_contents_creator">{{notice.creator}}</div>
+                        <div class="mid_box_table_contents_day">{{notice.pub_date | date:'Y.m.d'}}</div>
+                        <div class="mid_box_table_contents_viewer">{{notice.view_cnt}}</div>
+                    </div>
+                {% endfor %}
             </div>
 
             <div class="bottom_box">
-                <div class="bottom_box_pageform">
-                    <input type="button" class="bottom_box_left_button_double">
-                    <input type="button" class="bottom_box_left_button_one">
-                    <div class="bottom_box_page_left">1</div>
-                    <div class="bottom_box_page">2</div>
-                    <div class="bottom_box_page">3</div>
-                    <div class="bottom_box_page">4</div>
-                    <div class="bottom_box_page_right">5</div>
-                    <input type="button" class="bottom_box_right_button_one">
-                    <input type="button" class="bottom_box_right_button_double">
+                <!-- 페이징 처리 -->
+                {% if is_paginated %}
+                <div class="pagination">
+                    {% if page_obj.has_previous %}
+                    <div class="page-item page-pre">
+                        <a class="page-link" href="?page={{ page_obj.previous_page_number }}"
+                            tabindex="-1">이전</a>
+                    </div>
+                    {% else %}
+                    <div class="page-item page-pre disabled">
+                        <a class="page-link" href="#" tabindex="-1">이전</a>
+                    </div>
+                    {% endif %}
+
+                    {% for page in page_range %}
+                    <div class="page-item {% if page == page_obj.number %} page-activate {% endif %}">
+                        <a class="page-link" href="?page={{ page }}">{{ page }}</a>
+                    </div>
+                    {% endfor %}
+
+                    {% if page_obj.has_next %}
+                    <div class="page-item">
+                        <a class="page-link page-next"
+                            href="?page={{ page_obj.next_page_number }}">다음</a>
+                    </div>
+                    {% else %}
+                    <div class="page-item page-next disabled">
+                        <a class="page-link" href="#">다음</a>
+                    </div>
+                    {% endif %}
                 </div>
-                <a href="notice_create_office.html" class="bottom_box_create_button"></a>
+                {% endif %}
             </div>
         </div>
     </section>
 </div>
-
 
 {% endblock %}
