--- a/notice/templates/notice/create.html
+++ b/notice/templates/notice/create.html
@@ -1,7 +1,59 @@
 {% extends 'base.html' %}
+{% load static %}
 
+{% block head %}
+<link rel="stylesheet" href="{% static 'css/notice.css' %}" type="text/css" />
+{% endblock %}
 
 {% block content %}
+    <div class="main_box">
+        <aside>
+        <div class="aside_box">
+        <div class="aside_title">
+            <div class="aside_title_font">공지사항</div>
+        </div>
+        <div class="aside_contents"><a href="notice_driver.html" class="aside_contents_link">기사님 공지사항</a></div>
+        <div class="aside_contents"><a href="notice_driver.html" class="aside_contents_link">사무실 공지사항</a></div>
+        <div class="aside_contents aside_contents_thispage"><a href="notice_driver.html" class="aside_contents_link">공지사항 작성</a></div>
+        </div>
+        </aside>
+
+        <section class="main_section">
+        <div class="notice_section_box">
+            <div class="top_box">
+            <div class="top_box_title">공지사항 작성</div>
+        </div>
+
+        <div class="mid_box">
+            <div class="mid_box_first_line">
+            <div class="mid_box_front_box">제목</div>
+            <div class="mid_box_input_title">
+                <input type="text" class="mid_box_input_title_box" placeholder="여기에 제목을 입력하세요.">
+            </div>
+            </div>
+            <div class="mid_box_second_line">
+            <div class="mid_box_front_box">작성자</div>
+            <div class="mid_box_second_line_input"><input type="text" class="mid_box_input_creater_box" placeholder="이름을 입력하세요."></div>
+            <div class="mid_box_front_box">첨부파일</div>
+            <div class="mid_box_second_line_input">
+                <div class="mid_box_second_line_input_filebox">
+                <label for="mid_box_second_line_input_file_lable">파일선택</label>
+                <input type="file" id="mid_box_second_line_input_file_lable">
+                </div>
+            </div>
+            </div>
+            <div class="mid_box_textarea">
+            <textarea name="" id="" cols="30" rows="10" class="mid_box_textarea_input" placeholder="내용을 입력하세요"></textarea> 
+            </div>
+        </div>
+
+        <div class="bottom_box">
+            <a href="notice_office.html" class="notice_create_upload">작성완료</a>
+        </div>
+        </div>
+        </section>
+    </div>
+
     <form method="POST" action="{% url 'notice:create' %}" enctype="multipart/form-data">
         {% csrf_token %}
 
