--- a/static/css/basic_form.css
+++ b/static/css/basic_form.css
@@ -132,14 +132,17 @@ display: block;
   text-align: center;
   color: white;
 }
-#aside_contents{
+.aside_contents{
   text-align: right;
   margin: 1.5rem 1.5rem 0rem 0rem;
   font-size: 1.7rem;
 }
 .aside_contents_link{
   color: black;
+}
 
+.aside_contents_thispage{
+  font-weight: bold;
 }
 
 .pagination{
@@ -163,4 +166,9 @@ display: block;
 
 .page-activate{
   font-weight: bold;
+}
+
+.main_section{
+  margin-top: 12rem;
+  margin-left: 7rem;
 }
